--- a/frontend/b3st-frontend/package.json
+++ b/frontend/b3st-frontend/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^8.0.6",
+    "react-webcam": "^7.2.0",
     "styled-components": "^6.1.13",
     "uuid": "^10.0.0"
   },
